--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <div class="navbar">
 
           <div class="logo">
-             <img src="../image/netflix-removebg-preview.png" alt="">
+             <img src="./image/netflix-removebg-preview.png" alt="">
           </div>
           <div class="auth">
               <div class="auth">
@@ -194,7 +194,7 @@
        <p>Watch on smart TVs, PlayStation, Xbox, Chromecast,<br> Apple TV, Blu-ray players and more.</p>
      </div>
      <div class="img">
-         <img src="../image/netflix-removebg-preview.png" alt="">
+         <img src="./image/netflix-removebg-preview.png" alt="">
      </div>
 
 </div>
@@ -204,7 +204,7 @@
      </div>
 <div class="item1">
         <div class="img">
-           <img src="../image/moblie img.jpg" alt="">
+           <img src="./image/moblie img.jpg" alt="">
         </div>
         <div class="content">
           <h1>Download your shows to watch offline</h1>
@@ -222,7 +222,7 @@
        <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
      </div>
      <div class="img">
-         <img src="../image/Capture.PNG" alt="">
+         <img src="./image/Capture.PNG" alt="">
      </div>
  </div>   
 
@@ -231,7 +231,7 @@
      </div>
 <div class="item1">
         <div class="img">
-           <img src="../image/children.png" alt="">
+           <img src="./image/children.png" alt="">
         </div>
         <div class="content">
           <h1>Create profiles for kids</h1>
